--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     scroll-behavior: smooth;
 }
 
-body {
+html,body {
     font-family: 'Nunito', sans-serif;
     font-size: 1.25rem;
     font-weight: 300;
@@ -281,13 +281,13 @@ a:visited{
     .nav-links {
         position: absolute;
         right: 0px;
-        height: 80vh ;
+        height: 50vh ;
         top: 10vh;
         background-color: #fff;
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 50%;
+        width: 100%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
     }
@@ -309,6 +309,7 @@ a:visited{
     .burger div{
         background-color: #fff;
     }
+
 
 
     #team{
