--- a/style.css
+++ b/style.css
@@ -144,44 +144,34 @@ nav ul li a:hover:before{
     padding: 100px 0;
 }
 
-#arts .imgg{
-    text-align: center;
-    display: flex;
-    justify-content: center;
-}
-
-.imgg img{
-    width: 30%;
-}
-
-.sneak-flex{
-    display: flex;
-    flex-direction: row;
-    align-self: center;
-    justify-content: space-around;
-    width: 80vw;
-    margin: 70px auto;   
-}
-
 .sneakpeek{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+    max-width: 60vw;
+    height: 70vh;
+    margin: auto;
+    border: 2px solid palevioletred;
 }
 
-.sneakpeek img{
-    width: 20vw;
+.mySlides{
+    width: 100%;
     height: 100%;
-    border: 5px palevioletred solid;
-    box-shadow: -10px 10px 20px rgba(0, 0, 0, 0.3) ;
 }
 
-.sneakpeek p{
-    width: 20vw;
-    height: 100%;
-    font-size: 20px;
-    padding: 50px;
+.dot {
+	cursor: pointer;
+	height: 20px;
+	width: 20px;
+	margin: 15px 5px;
+	background-color: ;
+    border: 2px palevioletred solid;
+	border-radius: 50%;
+	display: inline-block;
+	transition: 0.3s ease;
+    position: relative;
+    bottom: 50px;
+}
+
+.active {
+	background-color: palevioletred;
 }
 
 /* .....TEAM SECTION......*/
@@ -256,11 +246,11 @@ nav ul li a:hover:before{
 
 /*......OTHERS......*/
 
-img {
+.team-div img {
     transition: transform .3s ease;
 }
 
-img:hover{
+.team-div img:hover{
     transform: scale(1.1);
 }
 
@@ -314,6 +304,37 @@ a:visited{
     .burger div{
         background-color: #fff;
     }
+
+    .sneakpeek{
+        max-width: 75vw;
+        height: 50vh;
+        margin: auto;
+        border: 2px solid palevioletred;
+    }
+    
+    .mySlides{
+        width: 100%;
+        height: 100%;
+    }
+    
+    .dot {
+        cursor: pointer;
+        height: 20px;
+        width: 20px;
+        margin: 15px 5px;
+        background-color: ;
+        border: 2px palevioletred solid;
+        border-radius: 50%;
+        display: inline-block;
+        transition: 0.3s ease;
+        position: relative;
+        bottom: 50px;
+    }
+    
+    .active {
+        background-color: palevioletred;
+    }
+
 
 
     #team{
