--- a/style.css
+++ b/style.css
@@ -322,9 +322,33 @@ a:visited{
         background-color: #fff;
     }
 
+
+    .bubbly-img{
+        width: 40%;    
+        animation: scaling 3s ease-in-out infinite;
+    }
+
+    .home-content{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-content: center;
+        align-items: center;
+        padding-bottom: 50px;
+    }
+
+    #home-wrapper p{
+        color: white;
+        font-weight: 400;
+        padding-top: 0px;
+        padding-bottom: 10px;
+        font-size: 18px;
+        width: 80%;
+    }
+
     .sneakpeek{
-        max-width: 75vw;
-        height: 50vh;
+        max-width: 90vw;
+        height: 60vh;
         margin: auto;
         border: 2px solid palevioletred;
     }
@@ -352,22 +376,7 @@ a:visited{
         background-color: palevioletred;
     }
 
-    .bubbly-img{
-        width: 40%;    
-        animation: scaling 3s ease-in-out infinite;
-    }
 
-
-
-    #home-wrapper p{
-        color: white;
-        font-weight: 400;
-        margin: auto;
-        padding-top: 50px;
-        padding-bottom: 100px;
-        font-size: 30px;
-        width: 70%;
-    }
 
     #team{
         margin: 100px 0;
