--- a/style.css
+++ b/style.css
@@ -125,14 +125,22 @@ nav ul li a:hover:before{
     }
 }
 
+.home-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    padding-bottom: 50px;
+}
+
 #home-wrapper p{
     color: white;
     font-weight: 900;
     margin: auto;
     font-size: 30px;
-    width: 60%;
-    padding-top: 50px;
-    padding-bottom: 100px;
+    width: 50%;
+    padding-bottom: 10px;
 }
 
 .blank-space {
@@ -331,7 +339,7 @@ a:visited{
     .home-content{
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
+        justify-content: center;
         align-content: center;
         align-items: center;
         padding-bottom: 50px;
@@ -341,7 +349,7 @@ a:visited{
         color: white;
         font-weight: 400;
         padding-top: 0px;
-        padding-bottom: 10px;
+        padding-bottom: 5px;
         font-size: 18px;
         width: 80%;
     }
@@ -458,6 +466,8 @@ a:visited{
         transform: translateX(0px);
     }
     
+}
+
 }
 
 
