--- a/style.css
+++ b/style.css
@@ -110,7 +110,6 @@ nav ul li a:hover:before{
     background: #0d6efd;
 }
 
-
 .bubbly-img{
     width: 20%;    
     animation: scaling 3s ease-in-out infinite;
@@ -343,6 +342,13 @@ a:visited{
         align-content: center;
         align-items: center;
         padding-bottom: 50px;
+    }
+
+    #home-wrapper{
+        margin-top: 10vh;
+        padding-top: 15px;
+        text-align: center;
+        background: #0d6efd;
     }
 
     #home-wrapper p{
