--- a/style.css
+++ b/style.css
@@ -189,7 +189,8 @@ nav ul li a:hover:before{
 #team{
     margin: 100px 0;
     background: #0dcaf0;
-    padding: 100px 0;
+    padding-top: 100px;
+    padding-bottom: 50px;
 }
 
 #team-flex{
@@ -288,7 +289,6 @@ a:visited{
     }
 
     .nav-links {
-        
         position: absolute;
         right: 0px;
         height: 50vh ;
@@ -411,7 +411,7 @@ a:visited{
     }
 
     .team-div{
-        height: 60vh;
+        height: auto;
     }
 
     .image{
