--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ nav ul li a:hover:before{
 
 .bubbly-img{
     width: 20%;    
-    animation: scaling 3s ease-in-out infinite;
+    animation: scaling 5s ease-in-out infinite;
 }
 
 @keyframes scaling{
@@ -159,6 +159,7 @@ nav ul li a:hover:before{
     height: 70vh;
     margin: auto;
     border: 2px solid palevioletred;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3), 0px -10px 10px rgba(0, 0, 0, 0.3);
 }
 
 .mySlides{
@@ -177,7 +178,7 @@ nav ul li a:hover:before{
 	display: inline-block;
 	transition: 0.3s ease;
     position: relative;
-    bottom: 50px;
+    bottom: ;
 }
 
 .active {
@@ -258,25 +259,24 @@ nav ul li a:hover:before{
 /*......OTHERS......*/
 
 .team-div img {
-    transition: transform .3s ease;
+    transition: transform .4s .1s ease-in-out;
 }
 
 .team-div img:hover{
     transform: scale(1.1);
 }
 
-a:visited{
-    color: palevioletred;
-}
 
 
 
-/*......Media Queries......*/
+/*................Media Queries................*/
 
 @media (max-width: 1400px) {
     .nav-links {
         width: 60%;
     }  
+}
+
 
 
 @media (max-width: 1024px) {
@@ -364,7 +364,7 @@ a:visited{
 
     .sneakpeek{
         max-width: 90vw;
-        height: 60vh;
+        height: 50vh;
         margin: auto;
         border: 2px solid palevioletred;
     }
@@ -385,7 +385,7 @@ a:visited{
         display: inline-block;
         transition: 0.3s ease;
         position: relative;
-        bottom: 50px;
+        bottom: ;
     }
     
     .active {
@@ -475,7 +475,7 @@ a:visited{
     
 }
 
-}
+
 
 
 
