--- a/style.css
+++ b/style.css
@@ -411,13 +411,14 @@ nav ul li a:hover:before{
     }
 
     .team-div{
-        height: 60vh;
-        max-width: 100%;
+        height: 100%;
+        width: auto;
+        text-align: center;
     }
 
     .image{
         width: 75vw;
-        height: 50vh;
+        height: 60vh;
         border-radius: 10px;
         border: 5px solid palevioletred;
         padding-bottom: 150px;
