--- a/style.css
+++ b/style.css
@@ -411,7 +411,7 @@ nav ul li a:hover:before{
     }
 
     .team-div{
-        height: 100%;
+        height: 100;
         width: auto;
         text-align: center;
     }
