--- a/style.css
+++ b/style.css
@@ -185,10 +185,30 @@ nav ul li a:hover:before{
 	background-color: palevioletred;
 }
 
-/* .....TEAM SECTION......*/
+/* .........FAQ SECTION..........*/
+
+.faq-details{
+    width: 50%;
+    margin: 30px auto;
+    text-align: center;
+}
+
+.faq-header{
+    border: 2px solid palevioletred;
+    border-radius: 5px;
+    padding: 20px;
+    width: 80%;
+    margin: auto;
+    cursor: pointer;
+    box-shadow: 0px 15px 10px rgba(0, 0, 0, 0.3) ;
+}
+
+.faq-text {
+    margin-top: 20px;
+}
+/* .........TEAM SECTION..........*/
 
 #team{
-    margin: 100px 0;
     background: #0dcaf0;
     padding-top: 100px;
     padding-bottom: 50px;
@@ -202,6 +222,8 @@ nav ul li a:hover:before{
     flex-direction: row;
     justify-content: space-around;
 }
+
+
 
 .image{
     width: 20vw;
@@ -392,10 +414,8 @@ nav ul li a:hover:before{
         background-color: palevioletred;
     }
 
-
-
     #team{
-        margin: 100px 0;
+        margin-top: 0px;
         background: #0dcaf0;
         padding-top: 150px;
     }
