--- a/style.css
+++ b/style.css
@@ -206,6 +206,7 @@ nav ul li a:hover:before{
 .faq-text {
     margin-top: 20px;
 }
+
 /* .........TEAM SECTION..........*/
 
 #team{
@@ -433,6 +434,27 @@ nav ul li a:hover:before{
         height: 100;
         width: auto;
         text-align: center;
+    }
+
+    .faq-details{
+        width: 90%;
+        margin: 30px auto;
+        text-align: center;
+        font-size: 18px;
+    }
+    
+    .faq-header{
+        border: 2px solid palevioletred;
+        border-radius: 5px;
+        padding: 20px;
+        width: 100%;
+        margin: auto;
+        cursor: pointer;
+        box-shadow: 0px 15px 10px rgba(0, 0, 0, 0.3);
+    }
+    
+    .faq-text {
+        margin-top: 20px;
     }
 
     .image{
