--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ nav {
     list-style: none;
 }
 
+.icon {
+    padding: 5px;
+}
+
 .nav-links a {
     position: relative;
     color: palevioletred;
@@ -75,7 +79,7 @@ nav ul li a:hover:before{
     transform-origin: left;
 } */
 
-.burger{
+.burger {
     display: none;
 }
 
@@ -88,15 +92,15 @@ nav ul li a:hover:before{
 }
 
 
-.toggle .line1{
+.toggle .line1 {
     transform: rotate(-45deg) translate(-5px, 6px);
 }
 
-.toggle .line2{
+.toggle .line2 {
     opacity: 0;
 }
 
-.toggle .line3{
+.toggle .line3 {
     transform: rotate(45deg) translate(-5px, -6px);
 }
 
@@ -159,7 +163,7 @@ nav ul li a:hover:before{
     height: 70vh;
     margin: auto;
     border: 2px solid palevioletred;
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3), 0px -10px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3), 0px -5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .mySlides{
@@ -171,7 +175,7 @@ nav ul li a:hover:before{
 	cursor: pointer;
 	height: 20px;
 	width: 20px;
-	margin: 15px 5px;
+	margin: 20px 5px;
 	background-color: ;
     border: 2px palevioletred solid;
 	border-radius: 50%;
@@ -200,7 +204,7 @@ nav ul li a:hover:before{
     width: 80%;
     margin: auto;
     cursor: pointer;
-    box-shadow: 0px 15px 10px rgba(0, 0, 0, 0.3) ;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3) ;
 }
 
 .faq-text {
@@ -233,7 +237,7 @@ nav ul li a:hover:before{
     padding-bottom: 150px;
     background: white;
     margin: 0px 50px;
-    box-shadow: 0px 15px 10px rgba(0, 0, 0, 0.3) ;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3) ;
 }
 
 .text{
@@ -337,6 +341,10 @@ nav ul li a:hover:before{
         font-size: 24px;
     }
 
+    .icon {
+        padding: 5px;
+    }
+
     .burger {
         display: block;
         cursor: pointer;
@@ -400,7 +408,7 @@ nav ul li a:hover:before{
         cursor: pointer;
         height: 20px;
         width: 20px;
-        margin: 15px 5px;
+        margin: 20px 5px;
         background-color: ;
         border: 2px palevioletred solid;
         border-radius: 50%;
@@ -413,6 +421,28 @@ nav ul li a:hover:before{
     .active {
         background-color: palevioletred;
     }
+
+    .faq-details{
+        width: 90%;
+        margin: 30px auto;
+        text-align: center;
+        font-size: 18px;
+    }
+    
+    .faq-header{
+        border: 2px solid palevioletred;
+        border-radius: 5px;
+        padding: 20px;
+        width: 100%;
+        margin: auto;
+        cursor: pointer;
+        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+    }
+    
+    .faq-text {
+        margin-top: 20px;
+    }
+
 
     #team{
         margin-top: 0px;
@@ -436,36 +466,15 @@ nav ul li a:hover:before{
         text-align: center;
     }
 
-    .faq-details{
-        width: 90%;
-        margin: 30px auto;
-        text-align: center;
-        font-size: 18px;
-    }
-    
-    .faq-header{
-        border: 2px solid palevioletred;
-        border-radius: 5px;
-        padding: 20px;
-        width: 100%;
-        margin: auto;
-        cursor: pointer;
-        box-shadow: 0px 15px 10px rgba(0, 0, 0, 0.3);
-    }
-    
-    .faq-text {
-        margin-top: 20px;
-    }
-
     .image{
         width: 75vw;
-        height: 60vh;
+        height: 50vh;
         border-radius: 10px;
         border: 5px solid palevioletred;
         padding-bottom: 150px;
         background: white;
         margin: 0px 50px;
-        box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3),0px -10px 10px rgba(0, 0, 0, 0.3) ;
+        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3),0px -5px 10px rgba(0, 0, 0, 0.3) ;
     }
 
     .text{
@@ -497,7 +506,6 @@ nav ul li a:hover:before{
     .team-div img:hover{
         transform: none;
     }
-
 
 }
 
