--- a/style.css
+++ b/style.css
@@ -292,6 +292,18 @@ nav ul li a:hover:before{
     transform: scale(1.1);
 }
 
+.footer{
+    text-align: center;
+    padding-bottom: 10px;
+    font-size: 18px; 
+    font-style: italic;
+    color: palevioletred;
+}
+
+footer{
+    margin: 20px auto;
+    margin-top: 30px;
+}
 
 
 
