--- a/style.css
+++ b/style.css
@@ -306,12 +306,21 @@ nav ul li a:hover:before{
 */
 
 
-
-
 #team{
     width: 100%;
     background: #0dcaf0;
     padding-top: 30px;
+}
+
+.meet{
+    text-align: center;
+    margin-left: px;
+    letter-spacing: 4px;
+    font-size: 40px;
+    font-weight: 800;
+    color: palevioletred;
+    padding-top: 20px;
+    text-shadow: 2px 2px 2px white;
 }
   
 .team-flex{
@@ -499,11 +508,27 @@ footer a{
         
     }
 
+    #arts{
+        padding-top: 30px; 
+    }
+    
+
     .sneakpeek{
         max-width: 90vw;
         height: 50vh;
         margin: auto;
         border: 2px solid palevioletred;
+    }
+
+    .sneaktext{
+        text-align: center;
+        text-transform: uppercase;
+        padding-bottom: 30px;
+        letter-spacing: 4px;
+        font-size: 40px;
+        font-weight: 800;
+        color: palevioletred;
+        text-shadow: 2px 2px 2px white;
     }
     
     .mySlides{
@@ -522,7 +547,6 @@ footer a{
         display: inline-block;
         transition: 0.3s ease;
         position: relative;
-        bottom: ;
     }
     
     .active {
@@ -631,8 +655,18 @@ footer a{
     #team{
         width: 100%;
         background: #0dcaf0;
-        padding-top: 30px;
+        padding-top: 10px;
         padding-bottom: 30px;
+    }
+
+    .meet{
+        text-align: center;
+        letter-spacing: 4px;
+        font-size: 30px;
+        font-weight: 800;
+        padding-top: 30px;
+        color: palevioletred;
+        text-shadow: 2px 2px 2px white;
     }
       
     .team-flex{
@@ -645,11 +679,20 @@ footer a{
     }
     .team-div{
         width: 80%;
-        margin: 50px auto;
+        margin: 30px auto;
+        margin-bottom: 40px;
         border-radius: 10px;
         border: 5px solid palevioletred;
         background: white;
         box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3) ;
+    }
+
+    .team-div {
+        transition: none;
+    }
+    
+    .team-div:hover{
+        transform: none;
     }
       
     .img-wrapper {
